--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 11:05:02 2018</p>
+         Last Run: Thu Nov 22 12:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -32,13 +32,13 @@
                         <td>12:00 PM</td>
                         <td>Overcast</td>
                         <td>-2</td>
-                        <td>-4</td>
+                        <td>-5</td>
                         <td>5</td>
-                        <td>74</td>
+                        <td>76</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>S</td>
-                        <td>83</td>
+                        <td>85</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>69</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>75</td>
+                        <td>78</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -58,23 +58,23 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>4</td>
-                        <td>66</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>69</td>
+                        <td>72</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>0</td>
-                        <td>-4</td>
+                        <td>-1</td>
+                        <td>-5</td>
                         <td>5</td>
-                        <td>68</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>54</td>
+                        <td>58</td>
                      </tr>
                   </tbody>
                </table>
@@ -102,10 +102,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-4",
+                 "-5",
                  "-4",
                  "-3",
-                 "-4"
+                 "-5"
                ]
              },
              {
@@ -118,7 +118,7 @@
                  "-2",
                  "-1",
                  "0",
-                 "0"
+                 "-1"
                ]
              }
            ]
@@ -188,10 +188,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "74",
-                 "69",
-                 "66",
-                 "68"
+                 "76",
+                 "70",
+                 "67",
+                 "69"
                ]
              },
              {
@@ -200,10 +200,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "83",
-                 "75",
-                 "69",
-                 "54"
+                 "85",
+                 "78",
+                 "72",
+                 "58"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 11:05:02 2018</p>
+         Last Run: Thu Nov 22 12:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -264,39 +264,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Clear</td>
+                        <td>Mostly Cloudy</td>
                         <td>0</td>
                         <td>-3</td>
                         <td>1</td>
-                        <td>55</td>
+                        <td>56</td>
                         <td>1</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>27</td>
+                        <td>62</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>2</td>
                         <td>0</td>
                         <td>1</td>
-                        <td>51</td>
+                        <td>52</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>W</td>
-                        <td>23</td>
+                        <td>WSW</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>2</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>49</td>
+                        <td>51</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>19</td>
+                        <td>47</td>
                      </tr>
                   </tbody>
                </table>
@@ -405,9 +405,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "55",
-                 "51",
-                 "49"
+                 "56",
+                 "52",
+                 "51"
                ]
              },
              {
@@ -416,9 +416,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "27",
-                 "23",
-                 "19"
+                 "62",
+                 "51",
+                 "47"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 11:05:02 2018</p>
+         Last Run: Thu Nov 22 12:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -479,15 +479,15 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>76</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>79</td>
+                        <td>80</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -620,7 +620,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "76",
+                 "77",
                  "79",
                  "81"
                ]
@@ -631,7 +631,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "79",
+                 "80",
                  "90",
                  "95"
                ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 11:05:02 2018</p>
+         Last Run: Thu Nov 22 12:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -697,36 +697,36 @@
                         <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>4</td>
-                        <td>83</td>
+                        <td>5</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WSW</td>
-                        <td>41</td>
+                        <td>SW</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-4</td>
-                        <td>-7</td>
-                        <td>5</td>
-                        <td>83</td>
+                        <td>-3</td>
+                        <td>-6</td>
+                        <td>6</td>
+                        <td>86</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>41</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>5</td>
-                        <td>84</td>
+                        <td>6</td>
+                        <td>87</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>42</td>
+                        <td>46</td>
                      </tr>
                   </tbody>
                </table>
@@ -754,7 +754,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-6",
-                 "-7",
+                 "-6",
                  "-7"
                ]
              },
@@ -766,7 +766,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-3",
-                 "-4",
+                 "-3",
                  "-4"
                ]
              }
@@ -824,9 +824,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
                  "5",
-                 "5"
+                 "6",
+                 "6"
                ]
              },
              {
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "83",
-                 "83",
-                 "84"
+                 "85",
+                 "86",
+                 "87"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "41",
-                 "41",
-                 "42"
+                 "46",
+                 "46",
+                 "46"
                ]
              }
            ]
