--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 12:05:02 2018</p>
+         Last Run: Thu Nov 22 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>85</td>
+                        <td>83</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>70</td>
-                        <td>0</td>
+                        <td>71</td>
+                        <td>1</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>78</td>
+                        <td>72</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -61,20 +61,20 @@
                         <td>67</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>S</td>
-                        <td>72</td>
+                        <td>SSE</td>
+                        <td>61</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-1</td>
-                        <td>-5</td>
+                        <td>-4</td>
                         <td>5</td>
                         <td>69</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>SSE</td>
-                        <td>58</td>
+                        <td>49</td>
                      </tr>
                   </tbody>
                </table>
@@ -105,7 +105,7 @@
                  "-5",
                  "-4",
                  "-3",
-                 "-5"
+                 "-4"
                ]
              },
              {
@@ -189,7 +189,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "76",
-                 "70",
+                 "71",
                  "67",
                  "69"
                ]
@@ -200,10 +200,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "85",
-                 "78",
+                 "83",
                  "72",
-                 "58"
+                 "61",
+                 "49"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 12:05:02 2018</p>
+         Last Run: Thu Nov 22 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 12:05:02 2018</p>
+         Last Run: Thu Nov 22 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -479,7 +479,7 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
@@ -487,7 +487,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>80</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -507,9 +507,9 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>81</td>
+                        <td>80</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SW</td>
                         <td>95</td>
                      </tr>
@@ -622,7 +622,7 @@
                "data":[
                  "77",
                  "79",
-                 "81"
+                 "80"
                ]
              },
              {
@@ -631,7 +631,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "80",
+                 "79",
                  "90",
                  "95"
                ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 12:05:02 2018</p>
+         Last Run: Thu Nov 22 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -697,24 +697,24 @@
                         <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>5</td>
+                        <td>11</td>
                         <td>85</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>SW</td>
-                        <td>46</td>
+                        <td>45</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-3</td>
-                        <td>-6</td>
-                        <td>6</td>
+                        <td>-4</td>
+                        <td>-7</td>
+                        <td>11</td>
                         <td>86</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>WSW</td>
-                        <td>46</td>
+                        <td>45</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -722,11 +722,11 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>6</td>
-                        <td>87</td>
+                        <td>88</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>WSW</td>
-                        <td>46</td>
+                        <td>45</td>
                      </tr>
                   </tbody>
                </table>
@@ -754,7 +754,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-6",
-                 "-6",
+                 "-7",
                  "-7"
                ]
              },
@@ -766,7 +766,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-3",
-                 "-3",
+                 "-4",
                  "-4"
                ]
              }
@@ -824,8 +824,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
-                 "6",
+                 "11",
+                 "11",
                  "6"
                ]
              },
@@ -837,7 +837,7 @@
                "data":[
                  "85",
                  "86",
-                 "87"
+                 "88"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "46",
-                 "46",
-                 "46"
+                 "45",
+                 "45",
+                 "45"
                ]
              }
            ]
