--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 13:05:02 2018</p>
+         Last Run: Thu Nov 22 14:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>83</td>
+                        <td>82</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -50,11 +50,11 @@
                         <td>1</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>72</td>
+                        <td>71</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>0</td>
                         <td>-3</td>
                         <td>4</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>61</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -74,7 +74,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>49</td>
+                        <td>48</td>
                      </tr>
                   </tbody>
                </table>
@@ -200,10 +200,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "83",
-                 "72",
-                 "61",
-                 "49"
+                 "82",
+                 "71",
+                 "59",
+                 "48"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 13:05:02 2018</p>
+         Last Run: Thu Nov 22 14:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -264,27 +264,27 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>0</td>
-                        <td>-3</td>
+                        <td>Partly Cloudy</td>
                         <td>1</td>
-                        <td>56</td>
+                        <td>-2</td>
+                        <td>1</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>62</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>2</td>
                         <td>0</td>
-                        <td>1</td>
-                        <td>52</td>
+                        <td>2</td>
+                        <td>50</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>51</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -292,11 +292,11 @@
                         <td>2</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>51</td>
+                        <td>50</td>
                         <td>0</td>
-                        <td>6</td>
-                        <td>WSW</td>
-                        <td>47</td>
+                        <td>8</td>
+                        <td>SW</td>
+                        <td>48</td>
                      </tr>
                   </tbody>
                </table>
@@ -323,7 +323,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-3",
+                 "-2",
                  "0",
                  "0"
                ]
@@ -335,7 +335,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "0",
+                 "1",
                  "2",
                  "2"
                ]
@@ -395,7 +395,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "1",
-                 "1",
+                 "2",
                  "2"
                ]
              },
@@ -405,9 +405,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56",
-                 "52",
-                 "51"
+                 "55",
+                 "50",
+                 "50"
                ]
              },
              {
@@ -416,9 +416,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "62",
-                 "51",
-                 "47"
+                 "50",
+                 "47",
+                 "48"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 13:05:02 2018</p>
+         Last Run: Thu Nov 22 14:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -480,38 +480,38 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>-1</td>
-                        <td>-4</td>
+                        <td>-2</td>
+                        <td>-6</td>
                         <td>5</td>
-                        <td>77</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SW</td>
-                        <td>79</td>
+                        <td>SSW</td>
+                        <td>67</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Overcast</td>
-                        <td>-1</td>
-                        <td>-4</td>
+                        <td>Mostly Cloudy</td>
+                        <td>-3</td>
+                        <td>-7</td>
                         <td>5</td>
-                        <td>79</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SW</td>
-                        <td>90</td>
+                        <td>SSW</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
-                        <td>-1</td>
-                        <td>-4</td>
-                        <td>5</td>
-                        <td>80</td>
+                        <td>-3</td>
+                        <td>-6</td>
+                        <td>6</td>
+                        <td>88</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SW</td>
-                        <td>95</td>
+                        <td>SSW</td>
+                        <td>86</td>
                      </tr>
                   </tbody>
                </table>
@@ -538,9 +538,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-4",
-                 "-4",
-                 "-4"
+                 "-6",
+                 "-7",
+                 "-6"
                ]
              },
              {
@@ -550,9 +550,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-1",
-                 "-1",
-                 "-1"
+                 "-2",
+                 "-3",
+                 "-3"
                ]
              }
            ]
@@ -611,7 +611,7 @@
                "data":[
                  "5",
                  "5",
-                 "5"
+                 "6"
                ]
              },
              {
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "77",
-                 "79",
-                 "80"
+                 "82",
+                 "85",
+                 "88"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "67",
                  "79",
-                 "90",
-                 "95"
+                 "86"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 13:05:02 2018</p>
+         Last Run: Thu Nov 22 14:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -694,39 +694,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Overcast</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>11</td>
-                        <td>85</td>
+                        <td>13</td>
+                        <td>87</td>
                         <td>0</td>
-                        <td>6</td>
-                        <td>SW</td>
-                        <td>45</td>
+                        <td>8</td>
+                        <td>SSW</td>
+                        <td>83</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-4</td>
-                        <td>-7</td>
-                        <td>11</td>
-                        <td>86</td>
+                        <td>Overcast</td>
+                        <td>-3</td>
+                        <td>-6</td>
+                        <td>13</td>
+                        <td>88</td>
                         <td>0</td>
-                        <td>6</td>
-                        <td>WSW</td>
-                        <td>45</td>
+                        <td>8</td>
+                        <td>SW</td>
+                        <td>82</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Overcast</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>6</td>
-                        <td>88</td>
+                        <td>8</td>
+                        <td>90</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>WSW</td>
-                        <td>45</td>
+                        <td>SW</td>
+                        <td>80</td>
                      </tr>
                   </tbody>
                </table>
@@ -754,7 +754,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-6",
-                 "-7",
+                 "-6",
                  "-7"
                ]
              },
@@ -766,7 +766,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-3",
-                 "-4",
+                 "-3",
                  "-4"
                ]
              }
@@ -824,9 +824,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "11",
-                 "11",
-                 "6"
+                 "13",
+                 "13",
+                 "8"
                ]
              },
              {
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "85",
-                 "86",
-                 "88"
+                 "87",
+                 "88",
+                 "90"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "45",
-                 "45",
-                 "45"
+                 "83",
+                 "82",
+                 "80"
                ]
              }
            ]
